# app-reportes-solidarios

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  dependencies.py  main.py
app/migrations/: env.py
app/migrations/versions/: 2459ad28b21f_timezone_timestamps.py  5c3ab6128397_initial.py  edd677eba8cd_add_verificacion_identidad.py
app/models/: __init__.py  entidad.py  publicacion.py  puntos.py  reporte.py  user.py  verificacion.py
app/routers/: auth.py  entidades.py  publicaciones.py  puntos.py  reportes.py  users.py  verificacion.py
app/schemas/: __init__.py  entidad.py  publicacion.py  puntos.py  reporte.py  user.py  verificacion.py
app/seeders/: run_seeders.py  seed_entidades.py  seed_publicaciones.py  seed_recompensas.py  seed_reportes.py  seed_users.py
app/services/: auth_service.py  cloudinary_service.py  entidad_service.py  publicacion_service.py  puntos_service.py  reporte_service.py  user_service.py  verificacion_service.py
